[gd_scene load_steps=4 format=3 uid="uid://hu84ryrqhy8y"]

[ext_resource type="Script" uid="uid://dm0wy4otrix13" path="res://MapIcon/MapIcon.gd" id="1_ln0sf"]
[ext_resource type="Texture2D" uid="uid://gleosasvjwc1" path="res://MapIcon/facility.png" id="2_cpreh"]

[sub_resource type="SphereShape3D" id="SphereShape3D_25vcd"]

[node name="MapIcon" type="Node3D"]
script = ExtResource("1_ln0sf")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, 0)
texture = ExtResource("2_cpreh")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_25vcd")

[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
